--- a/configs/libnfc-brcm.conf
+++ b/configs/libnfc-brcm.conf
@@ -316,4 +316,11 @@ XTAL_FREQ_INDEX=3
 
 ###############################################################################
 # NCI Hal Module name
-#NCI_HAL_MODULE="nfc_lg.default"
+NCI_HAL_MODULE="nfc_lg.default"
+
+###############################################################################
+# AID_MATCHING constants
+# AID_MATCHING_EXACT_ONLY 0x00
+# AID_MATCHING_EXACT_OR_PREFIX 0x01
+# AID_MATCHING_PREFIX_ONLY 0x02
+AID_MATCHING_MODE=0x01
