c70n: Make changes for c70n

--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -221,12 +221,12 @@ LGE_TLS_MODE_UNF=7
 # LGE DEBUG INFORMATION
 ################################
 
-# [1] target__Product= c90_global_com
-# [2] target__Device=  c90
+# [1] target__Product= c70_global_com
+# [2] target__Device=  c70n
 # [3] target__Carrier= GLOBAL
 # [4] target__Country= COM
 # [5] target__Chipset= MSM8916
 # [6] target__EngineVer=  32
-# [7] target__BuildVariant= 
+# [7] target__BuildVariant= user 
 
 ##############EOF################
